--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -10,21 +10,17 @@
 
     <com.google.android.exoplayer2.ui.PlayerView
             android:id="@+id/playerView"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:resize_mode="fill"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:use_controller="false"/>
-
-    <Button android:id="@+id/pickVideoBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_centerInParent="true"
+            app:use_controller="false"/>
+
+    <Button
+        android:id="@+id/pickVideoBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_alignParentTop="true"
             android:text="Pick a Video"
             android:textAllCaps="false"
             android:layout_marginTop="10dp"
@@ -34,25 +30,24 @@
             android:id="@+id/durationView"
             android:layout_width="wrap_content"
             android:textSize="12sp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/videoTrimmerView"
+            android:layout_above="@id/videoTrimmerView"
+        android:layout_centerInParent="true"
             android:layout_marginBottom="12dp"
             android:textColor="@android:color/white"
             android:layout_height="wrap_content"/>
 
     <idv.luchafang.videotrimmer.VideoTrimmerView
-            android:id="@+id/videoTrimmerView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="11dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:vtv_window_bar_width="10dp"
-            app:vtv_window_border_color="@android:color/white"
-            app:vtv_window_border_width="2dp"
-            app:vtv_window_left_bar="@drawable/trimmer_left_bar"
-            app:vtv_window_right_bar="@drawable/trimmer_right_bar"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:id="@+id/videoTrimmerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_alignParentBottom="true"
+        app:vtv_window_bar_width="10dp"
+        app:vtv_window_border_color="#FFF"
+        app:vtv_window_border_width="2dp"
+        app:vtv_window_left_bar="@drawable/trimmer_left_bar"
+        app:vtv_window_right_bar="@drawable/trimmer_right_bar"
+        tools:layout_editor_absoluteX="0dp" />
+</RelativeLayout>
